@@ -1,3 +1,9 @@
+2014-06-03  Richard Henderson  <rth@redhat.com>
+
+	* sysdeps/unix/sysv/linux/aarch64/clone.S (__clone): Save args for
+	child in registers, not on the stack.  Remove RESET_PID conditionals.
+	* sysdeps/unix/sysv/linux/aarch64/nptl/clone.S: Remove file.
+
 2014-06-03  Marcus Shawcroft  <marcus.shawcroft@arm.com>
 
 	* sysdeps/aarch64/libm-test-ulps: Regenerate.
